anypoint-connector-devkit/v/3.8/connector-certification-program-guidelines.adoc
=  MuleSoft连接器认证计划指南
:keywords: connector, certification, devkit, program guidelines

以下部分描述了连接器认证所需的具体细节。要全面了解该过程，请访问 link:https://www.mulesoft.com/platform/cloud-connectors/certified[这一页]。

== 什么是MuleSoft连接器认证计划？

MuleSoft的连接器认证计划将指导您完成创建可供MuleSoft认证的企业级连接器的过程。通过认证后，连接器将通过Anypoint Exchange提供，供我们的客户和开发人员查找和使用。

== 开始之前

在开始认证计划之前，请考虑以下事项并确保您可以遵守以下要求：

* 连接器必须保持最新且安全，并且每年至少重新进行一次认证。
* 连接器必须为企业版本的MuleSoft软件或MuleSoft服务构建和分发。
* 连接器的所有交易都将在客户和合作伙伴之间进行，而不是通过MuleSoft。
* 连接器必须是一个全功能的，生产就绪的企业级应用程序/协议连接器（即，它是连接Mule与外部系统的连接器）
* 代码必须准备好部署到持续集成环境中。代码应该能够从命令行编译而不需要导入私有回购站。证书应该单独提供，并且可以在编译时设置。另外，认证需要连接器的沙箱凭证。
* 连接器只能使用开放源代码或您拥有的第三方库。没有第三方，不可分发的图书馆将被接受。
* 如果 link:https://www.mulesoft.com/exchange[Anypoint Exchange]上已经存在类似的连接器，您仍然可以提交您的连接器，因为它提供了优于现有连接器的附加功能。

== 提供支持

合作伙伴或开发人员需要为Anypoint Exchange上的连接器提供*full support*。对于MuleSoft收到的支持查询，MuleSoft将直接向客户提供商业上合理的一级电话，网络和/或电子邮件支持。 MuleSoft将采取和解决任何与商业MuleSoft产品有关的问题。任何特定于合作伙伴连接器的问题都将升级到合作伙伴。

* 合作伙伴将回复*one business day*内从MuleSoft升级的所有支持查询。
* 合作伙伴将尽最大努力为*five business days.*内的客户解决技术支持问题

您的连接器的== 定价

合作伙伴或开发人员将自行决定是否让您的连接器免费或收费。但是，所有连接器必须在Anypoint Studio内免费提供。虽然不是强制性的，但我们建议为客户提供连接器试用（用于设计和部署）。

[%header,cols="20,80"]
|===
一个|
类别

 为|
细节

| 免费 |连接器可通过Anypoint Exchange免费下载和使用。
| 付费 |在Anypoint Studio的设计时间内，可以在Mule应用程序中使用付费连接器。在部署中，连接器不会在没有许可证的情况下运行。客户需要直接从合作伙伴处购买连接器，并且应该使用 link:/anypoint-connector-devkit/v/3.8/certified-connector-license-management[生成的许可证密钥由MuleSoft提供]管理付费连接器的使用。连接器的价格将由合作伙伴决定。
|===

== 许可条款
请在LICENSE.md的许可条款之前添加以下法律条款
****
*About MuleSoft Certified Connectors*

MuleSoft认证连接器由MuleSoft的合作伙伴和开发人员社区开发。这些连接器已经由MuleSoft审查和认证。要购买_ [连接器名称] _连接器（如果需要）或者获得帮助或支持，请直接联系_ [合作伙伴名称] _（联系信息）_。 MuleSoft放弃MuleSoft认证连接器的任何支持义务。

通过安装此连接器，您同意MuleSoft与该连接器的开发人员共享您的联系信息，以便您可以直接从开发人员那里获得关于它的更多信息。

*Your own license terms*
****

== 导出合规性
除非经美国法律授权，否则您不得使用或以其他方式导出或再出口从MuleSoft或您的资料（包括但不限于合作伙伴文档和合作伙伴连接器）收到的MuleSoft机密信息或MuleSoft文档。特别是，但不限于，MuleSoft机密信息，MuleSoft文档和您的资料不得出口或再出口（a）进入任何美国禁运国家或（b）美国财政部特别指定国民名单上的任何人或美国商务部否认个人名单或实体名单。您声明并保证您不在任何此类国家或任何此类列表中。您同意您不会为了美国法律禁止的任何目的使用或再出口任何MuleSoft机密信息或MuleSoft文档及您的材料，包括但不限于开发，设计，制造或生产核，化学或生物武器。您将全权负责确保您通过Anypoint Exchange为用户提供的材料符合相关司法管辖区内有关技术出口和进口的所有法规。 （大写术语应与“认证连接器合作伙伴协议”中的定义相同。）

== 开发和认证

请与我们分享您想要开发的连接器，并通过填写 link:https://www.mulesoft.com/platform/cloud-connectors/certified#certification[这种形式。]获得认证。我们会与您联系并提供更多信息。
